--- a/status-lamp-esp01.yaml
+++ b/status-lamp-esp01.yaml
@@ -1,6 +1,6 @@
 # These substitutions allow the end user to override certain values
 substitutions:
-  name: "status-lamp"
+  name: "status-lamp-2"
 
 esphome:
   name: "${name}"
@@ -11,7 +11,7 @@ esphome:
   # This will allow for (future) project identification,
   # configuration and updates.
   project:
-    name: esphome.status-lamp
+    name: esphome.status-lamp-2
     version: "1.11"
 
 esp8266:
@@ -39,22 +39,7 @@ wifi:
 # to provision wifi credentials to the device.
 captive_portal:
 
-##########################################################
-# Most projects should not remove anything from above here
-# and should just modify the name, project name/version 
-# and git url for the dashboard_import
-##########################################################
-
-
-# Sets up Bluetooth LE (Only on ESP32) to allow the user
-# to provision wifi credentials to the device.
-#esp32_improv:
-#  authorizer: none
-
-# Sets up the improv via serial client for Wi-Fi provisioning.
-# Handy if your device has a usb port for the user to add credentials when they first get it.
-#improv_serial:
-
+###########################################################
 
 light:
   - platform: neopixelbus
