--- a/status-lamp-esp01.yaml
+++ b/status-lamp-esp01.yaml
@@ -1,6 +1,6 @@
 # These substitutions allow the end user to override certain values
 substitutions:
-  name: "status-lamp-2"
+  name: "status-lamp"
 
 esphome:
   name: "${name}"
@@ -11,8 +11,8 @@ esphome:
   # This will allow for (future) project identification,
   # configuration and updates.
   project:
-    name: esphome.status-lamp-2
-    version: "1.11"
+    name: esphome.status-lamp
+    version: "1.1"
 
 esp8266:
   board: esp01_1m
