--- a/status-lamp-esp01.yaml
+++ b/status-lamp-esp01.yaml
@@ -47,21 +47,21 @@ light:
     type: GRB
     variant: WS2811
     pin: GPIO03
-    num_leds: 4
+    num_leds: 5
     name: "Status-Lamp"
     effects:
       - addressable_color_wipe:
           name: Color Wipe Effect With Custom Values
           colors:
             - red: 100%
-              green: 100%
+              green: 0%
               blue: 100%
               num_leds: 3
             - red: 0%
               green: 0%
               blue: 0%
               num_leds: 1
-          add_led_interval: 100ms
+          add_led_interval: 200ms
           reverse: false
   - platform: partition
     name: "Led 1"
@@ -91,4 +91,10 @@ light:
       - id: ledstrip1
         from: 3
         to: 3
-        
+  - platform: partition
+    name: "Led 5"
+    segments:
+      # Use first 10 LEDs from the light with ID light1
+      - id: ledstrip1
+        from: 4
+        to: 4
