--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,4 +12,4 @@ jobs:
       # CHANGEME: Set the filenames of your config files here:
       files: status-lamp-esp01.yaml
       # CHANGEME: Set the name of your project here:
-      name: Status Lamp 2
+      name: Status Lamp
