--- a/status-lamp-esp01.yaml
+++ b/status-lamp-esp01.yaml
@@ -39,6 +39,10 @@ wifi:
 # to provision wifi credentials to the device.
 captive_portal:
 
+# Sets up the improv via serial client for Wi-Fi provisioning.
+# Handy if your device has a usb port for the user to add credentials when they first get it.
+improv_serial:
+
 ###########################################################
 
 light:
