--- a/status-lamp-esp01.yaml
+++ b/status-lamp-esp01.yaml
@@ -1,7 +1,7 @@
 # These substitutions allow the end user to override certain values
 substitutions:
   name: "status-lamp"
-  test: ""
+  test: "qwqw"
 
 esphome:
   name: "${name}"
