--- a/status-lamp-esp01.yaml
+++ b/status-lamp-esp01.yaml
@@ -1,7 +1,6 @@
 # These substitutions allow the end user to override certain values
 substitutions:
   name: "status-lamp"
-  test: "qwqw"
 
 esphome:
   name: "${name}"
@@ -13,7 +12,7 @@ esphome:
   # configuration and updates.
   project:
     name: esphome.status-lamp
-    version: "1.13.1"
+    version: "1.13.2"
 
 esp8266:
   board: esp01_1m
@@ -52,8 +51,8 @@ light:
     type: GRB
     variant: WS2811
     pin: GPIO03
-    num_leds: 5
-    name: "Status-Lamp-${test}"
+    num_leds: 12
+    name: "Status-Lamp"
     effects:
       - addressable_color_wipe:
           name: Color Wipe Effect With Custom Values
@@ -78,7 +77,7 @@ light:
   - platform: partition
     name: "Led 2"
     segments:
-      # Use first 10 LEDs from the light with ID light1
+      # Use first 10 LEDs from the light with ID light5
       - id: ledstrip1
         from: 1
         to: 1
@@ -103,3 +102,52 @@ light:
       - id: ledstrip1
         from: 4
         to: 4
+  - platform: partition
+    name: "Led 6"
+    segments:
+      # Use first 10 LEDs from the light with ID light1
+      - id: ledstrip1
+        from: 5
+        to: 5
+  - platform: partition
+    name: "Led 7"
+    segments:
+      # Use first 10 LEDs from the light with ID light1
+      - id: ledstrip1
+        from: 6
+        to: 6
+  - platform: partition
+    name: "Led 8"
+    segments:
+      # Use first 10 LEDs from the light with ID light1
+      - id: ledstrip1
+        from: 7
+        to: 7
+  - platform: partition
+    name: "Led 9"
+    segments:
+      # Use first 10 LEDs from the light with ID light1
+      - id: ledstrip1
+        from: 8
+        to: 8
+  - platform: partition
+    name: "Led 10"
+    segments:
+      # Use first 10 LEDs from the light with ID light1
+      - id: ledstrip1
+        from: 9
+        to: 9
+  - platform: partition
+    name: "Led 11"
+    segments:
+      # Use first 10 LEDs from the light with ID light1
+      - id: ledstrip1
+        from: 10
+        to: 10
+  - platform: partition
+    name: "Led 12"
+    segments:
+      # Use first 10 LEDs from the light with ID light1
+      - id: ledstrip1
+        from: 11
+        to: 11
